<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAppBackground">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        tools:context="com.ire.huthunt.SignUpActivity">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>


        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_image"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:drawableStart="@drawable/emoticon_happy"
            android:drawablePadding="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_marginTop="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_et"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="8dp"/>


        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_et"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:drawableStart="@drawable/key_variant"
            android:drawablePadding="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@id/password_et"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/user_background"
            android:layout_marginTop="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_button"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="62dp">

            <TextView
                android:id="@+id/existing_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_account"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
