<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAppBackground">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        tools:context="com.ire.huthunt.SignInActivity">

        <ImageView
            android:id="@+id/app_image"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="8dp"
            android:src="@mipmap/house_sketch"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>


        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_image"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/emoticon_happy"
            android:drawablePadding="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_marginTop="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>


        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_et"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="8dp"/>


        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_et"
            android:layout_alignParentEnd="true"
            android:text="@string/forgot_password"
            android:fontFamily="sans-serif-condensed"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="28dp"/>


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@id/password_et"
            android:text="@string/sign_in"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/colorAppBackground"
            android:background="@drawable/registration_button_background"
            android:layout_marginTop="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_button"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="64dp">

            <TextView
                android:id="@+id/no_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_tv"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sign_up"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
.
    </RelativeLayout>

</RelativeLayout>
